# iwc-core

./: .gitignore  LICENSE  README.md  out_fixed.fp.json  out_pois.fp.json  pyproject.toml  sh_session.fp.json  sh_session.jsonl  sh_session.jsonl.manifest.yaml  sh_single.fp.json  sharegpt_multiturn.json
docs/: SEMANTICS.md
examples/: semantic_demo.jsonl
iwc/: calibrate.py  cli.py  compile.py  decision.py  eval.py  export.py  fingerprint.py  predict.py  profile.py  report.py
iwc/analyze/: arrivals.py  cli.py  summary.py  tokenizer.py
iwc/diff/: cli.py  core.py
profiles/: vllm_a100.yaml
runs/exp1/: README.md  summary.csv  workload.jsonl  workload.jsonl.manifest.yaml
runs/exp1/c1/: report.json  results.jsonl
runs/exp1/c16/: report.json  results.jsonl
runs/exp1/c2/: report.json  results.jsonl
runs/exp1/c4/: report.json  results.jsonl
runs/exp1/c8/: report.json  results.jsonl
schema/: profile.schema.json  workload.schema.json
scripts/: plot_exp1.py
tests/golden/: aiperf_single_request.jsonl  analyze_bursty_10req.jsonl.golden.json  analyze_session_chat_5turns_cumulative.jsonl.golden.json  diff_session_vs_cumulative.golden.json  fingerprint_session_chat_5turns.golden.json  gen_golden.py  test_arrivals_edge_cases.py  test_export_aiperf.py  test_golden_analyze.py  test_golden_diff.py  test_golden_fingerprint.py
